[package]
name = "solana-transaction-utils"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "solana_transaction_utils"
path = "src/lib.rs"

[dependencies]
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
tokio = { workspace = true }
futures-core = "0.3.30"
futures = "0.3.30"
bincode = "1.3.3"
solana-transaction-status = "1.18.22"
solana-quic-client = "1.18.22"
itertools = { workspace = true }
thiserror = "1"

[features]
default=[]
