[package]
name = "tuktuk-crank-turner"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tuktuk-crank-turner"
path = "src/main.rs" 

[dependencies]
anchor-lang = { workspace = true }
anchor-client = { workspace = true, features = ["async"] }
solana-sdk = { workspace = true }
tokio = { workspace = true }
solana-client = { workspace = true }
anyhow = { workspace = true }
futures-core = "0.3.30"
futures = "0.3.30"
clap = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = "5.0.2"
solana-transaction-status = "1.18.22"
solana-transaction-utils = { path = "../solana-transaction-utils" }
tuktuk-sdk = { path = "../tuktuk-sdk" }
tuktuk-program = { path = "../tuktuk-program" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-graceful-shutdown = { workspace = true }
itertools = { workspace = true }

[features]
default=[]
