[package]
name = "tuktuk-sdk"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

build = "build.rs"

[lib]
name = "tuktuk_sdk"
path = "src/lib.rs"

[dependencies]
anchor-lang = { workspace = true }
solana-sdk = { workspace = true }
thiserror = "1"
serde = { workspace = true }
solana-client = { workspace = true }
solana-account-decoder = { version = "1.18.22" }
futures-core = { version = "0.3.30" }
futures = { version = "0.3.30" }
tokio = { workspace = true }
bincode = { version = "1.3.3" }
itertools = { workspace = true }
async-trait = { version = "0" }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
tuktuk-program = { path = "../tuktuk-program" }

[features]
default = []