[package]
name = "cron"
version = "0.1.2"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cron"

[features]
default = []
devnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
# tuktuk-program = { path = "../../../tuktuk-program" }
# Need to use this for build-verify to work. Use above for debug before pushing
tuktuk-program = { git = "https://github.com/helium/tuktuk.git", rev = "1b2384c" }
clockwork-cron = "2.0.19"
chrono = "0.4.39"
